--- a/spec/fixtures/vcr_cassettes/translation.yml
+++ b/spec/fixtures/vcr_cassettes/translation.yml
@@ -10,7 +10,7 @@ http_interactions:
       Accept:
       - application/json
       User-Agent:
-      - ruby-lokalise-api gem/2.1.0
+      - ruby-lokalise-api gem/2.2.0
       X-api-token:
       - "<LOKALISE_TOKEN>"
   response:
@@ -21,7 +21,7 @@ http_interactions:
       server:
       - nginx
       date:
-      - Fri, 17 May 2019 17:29:04 GMT
+      - Mon, 15 Jul 2019 16:46:00 GMT
       content-type:
       - application/json
       transfer-encoding:
@@ -31,7 +31,7 @@ http_interactions:
       vary:
       - Accept-Encoding
       set-cookie:
-      - PHPSESSID=b280540b1d3ee9381688004875ba3e07; expires=Tue, 16-Jul-2019 17:29:04
+      - PHPSESSID=0d91b73f6475a6feef64c2f4a3249d7b; expires=Fri, 13-Sep-2019 16:46:00
         GMT; Max-Age=5184000; path=/; secure; HttpOnly
       expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
@@ -47,7 +47,7 @@ http_interactions:
       encoding: ASCII-8BIT
       string: '{"project_id":"803826145ba90b42d5d860.46800099","translation":{"translation_id":80015147,"key_id":15571975,"language_iso":"en","translation":"RSpec
         is a testing suite","modified_by":20181,"modified_by_email":"bodrovis@protonmail.com","modified_at":"2019-03-26
-        16:41:31 (Etc\/UTC)","modified_at_timestamp":1553618491,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":5}}'
+        16:41:31 (Etc\/UTC)","modified_at_timestamp":1553618491,"is_reviewed":false,"reviewed_by":0,"is_fuzzy":false,"words":5,"custom_translation_statuses":[]}}'
     http_version: 
-  recorded_at: Fri, 17 May 2019 17:28:52 GMT
-recorded_with: VCR 4.0.0
+  recorded_at: Mon, 15 Jul 2019 16:45:40 GMT
+recorded_with: VCR 5.0.0
