--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -59,6 +59,15 @@ Style/TrailingCommaInArrayLiteral:
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: 'no_comma'
 
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
 RSpec/MultipleExpectations:
   Max: 30
 
